add maven upload

--- a/build.gradle
+++ b/build.gradle
@@ -13,12 +13,15 @@ buildscript {
     }
 }
 
+plugins {
+    id 'maven-publish'
+}
+
 allprojects {
     apply from: rootProject.file("versions.gradle")
     repositories {
         mavenLocal()
         google()
-        jcenter()
         mavenCentral()
     }
 }
@@ -26,3 +29,14 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+publishing {
+    publications {
+        maven(MavenPublication) {
+            groupId = 'com.smilehacker.workmanager'
+            artifactId = 'workmanager-ext'
+            version = '0.0.1'
+        }
+    }
+}
+
